  . Added stable sorting algo zend_insert_sort. (Laruence)
  . Implemented the RFC `Scalar Type Decalarations v0.5`. (Anthony)
  . Implemented the RFC `Group Use Declarations`. (Marcio)
  . Implemented the RFC `Continue Output Buffering`. (Mike)
  . Implemented the RFC `Constructor behaviour of internal classes`. (Dan, Dmitry)
  . Implemented the RFC `Fix "foreach" behavior`. (Dmitry)

- Curl:
  . Fixed bug #68937 (Segfault in curl_multi_exec). (Laruence)
  . Removed support for unsafe file uploads. (Nikita)

- Date:
  . Fixed day_of_week function as it could sometimes return negative values
    internally. (Derick)
  . Removed $is_dst parameter from mktime() and gmmktime(). (Nikita)
  . Removed date.timezone warning
    (https://wiki.php.net/rfc/date.timezone_warning_removal). (Bob)
  . Added "v" DateTime format modifier to get the 3-digit version of fraction 
    of seconds. (Mariano Iglesias)
  . Implemented FR #69089: Added DateTime::RFC3339_EXTENDED to output in 
    RFC3339 Extended format which includes fraction of seconds (Mariano 
    Iglesias)
	
- DBA:
  . Fixed bug #62490 (dba_delete returns true on missing item (inifile)). (Mike)
  . Fixed bug #68711 (useless comparisons). (bugreports at internot dot info)

- DOM:
  . Made DOMNode::textContent writeable. (Tjerk)

- GD:
  . Made fontFetch's path parser thread-safe. (Sara)

- Fileinfo:
  . Fixed bug #66242 (libmagic: don't assume char is signed). (ArdB)

- Filter:
  . New FILTER_VALIDATE_DOMAIN and better RFC conformance for FILTER_VALIDATE_URL. (Kevin Dunglas)

- FPM:
  . Fixed bug #68945 (Unknown admin values segfault pools). (Laruence)
  . Fixed bug #65933 (Cannot specify config lines longer than 1024 bytes). (Chris Wright)
  . Implement request #67106 (Split main fpm config). (Elan Ruusamäe, Remi)

- Intl:
  . Removed deprecated aliases datefmt_set_timezone_id() and
    IntlDateFormatter::setTimeZoneID(). (Nikita)

- JSON